--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,15 @@
             android:text="Whipped cream"
             android:textSize="16sp"/>
 
+        <CheckBox
+            android:id="@+id/chocolate_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingLeft="24dp"
+            android:text="Chocolate"
+            android:textSize="16sp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
