--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,11 +15,19 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.example.android.coffeeorder.MainActivity">
 
+        <EditText
+            android:id="@+id/name_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Name"
+            android:inputType="text" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Toppings"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true" />
 
         <CheckBox
             android:id="@+id/whipped_cream_checkbox"
@@ -29,7 +36,7 @@
             android:layout_marginTop="16dp"
             android:paddingLeft="24dp"
             android:text="Whipped cream"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <CheckBox
             android:id="@+id/chocolate_checkbox"
@@ -38,7 +45,7 @@
             android:layout_marginTop="16dp"
             android:paddingLeft="24dp"
             android:text="Chocolate"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="wrap_content"
