--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,8 @@
             android:inputType="text" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Toppings"
-            android:textAllCaps="true" />
+            style="@style/HeaderTextStyle"
+            android:text="Toppings"/>
 
         <CheckBox
             android:id="@+id/whipped_cream_checkbox"
@@ -42,18 +39,15 @@
             android:id="@+id/chocolate_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+
             android:paddingLeft="24dp"
             android:text="Chocolate"
             android:textSize="16sp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            style="@style/HeaderTextStyle"
             android:layout_marginTop="16dp"
-            android:text="QUANTITY"
-            android:textAllCaps="true" />
+            android:text="QUANTITY"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
-                android:text="0"
+                android:text="1"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -83,21 +77,6 @@
                 android:text="+" />
 
         </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Order Summary"
-            android:textAllCaps="true" />
-
-        <TextView
-            android:id="@+id/order_summary_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="$0"
-            android:textSize="16sp" />
 
         <Button
             android:layout_width="wrap_content"
